# epic-drich-beam-test-analysis

./: .clang-format  .gitignore  BACKLOG.md  CLEAN_OFF.md  CMakeLists.txt  DISCUSSION.md  Doxyfile  README.md  radiator_npe_comparison.root
.github/workflows/: build.yml  check-macros.yml  clang-format.yml  doxygen.yml  lint.yml
conf/: framer_conf.toml  mapping_conf.2023.toml  mapping_conf.2024.toml  mapping_conf.2025.toml  mapping_conf.toml  readout_config.2024.txt  readout_config.2025.toml  readout_config.toml  readout_config.txt  recodata.toml  sensors_config.txt  streaming.toml  trigger_conf.2024.toml  trigger_conf.2025.toml  trigger_conf.toml  trigger_setup.2024.txt  trigger_setup.txt
conf/QA/: framer_conf.toml  recodata.toml  streaming.toml
conf/calib/: calibration_conf.toml
conf/defaults/: framer_conf.toml  mapping_conf.toml  readout_config.toml  streaming.toml  trigger_conf.toml
dict/: alcor_linkdef.h
docs/: CLAUDE_GUIDELINES.md  Doxyfile  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.4.0.md  RELEASE_NOTES_v2.4.1.md  RELEASE_NOTES_v2.5.0.md  RELEASE_NOTES_v2.5.2.md  RELEASE_NOTES_v2.5.3.md  coding_conventions.md  mainpage.md  readme_page.dox
include/: alcor_data.h  alcor_data_streamer.h  alcor_finedata.h  alcor_lightdata.h  alcor_recodata.h  alcor_recotrackdata.h  alcor_spilldata.h  analysis_results.h  config_reader.h  lib_loader.h.in  lightdata_writer.h  mapping.h  parallel_streaming_framer.h  recodata_writer.h  recotrackdata_writer.h  standard_analysis.h  streaming_framer.h  tracking_altai.h  triggers.h  utility.h  version.h.in
include/ring-finding-algorithms/: hough-transform.h
include/triggers/: DISCUSSION.md  README.md  config.h  events.h  registry.h  streaming.h
include/util/: bit_ops.h  circle_fit.h  conf_path.h  config_reader.h  global_index.h  radiator_efficiency.h  ring_model.h  root_draw.h  root_hist.h  root_io.h  toml_utils.h
include/utilities/: btana_dump.h
include/utility/: DISCUSSION.md  README.md  alcor_op_mode.h  audit.h  bit_ops.h  circle_fit.h  conf_path.h  config_dump.h  config_reader.h  global_index.h  qa_publish.h  radiator_efficiency.h  ring_model.h  root_draw.h  root_hist.h  root_io.h
include/writers/: DISCUSSION.md  README.md  anchor_dt_canvas.h  lightdata.h  pulser_calib.h  recodata.h  recotrackdata.h
lib/: alcor_data.h  alcor_data_streamer.h  alcor_finedata.h  alcor_lightdata.h  alcor_recodata.h  alcor_recodata_h.d  alcor_recodata_h_ACLiC_dict_rdict.pcm  alcor_spilldata.h  config_reader.h  fast_simulation.h  mapping.h  streaming_framer.h  triggers.h  utility.h
macros/: analysis_example.C  analysis_example.cpp  check_the_tagger.C  check_tree_vector.C  finecalib_step0.C  hitmap.C  lightQA.C  lightdata_writer.C  lightwriter.C  lightwriter_v2.C  process_dcr.C  recoQA.C  recodata_writer.C  recowriter.C  simple_test.C  simplefit.C  test.C  test_fine.C  test_timing.C
macros/examples/: afterpulse_treatment.cpp  cross_talk_treatment.cpp  dark_count_rate.cpp  dark_count_rate_run_comparison.cpp  elliptic_investigation.cpp  fine_calibration.cpp  fine_calibration_timing.cpp  my_test.cpp  photon_number.cpp  photon_number_and_sigma.cpp  photon_number_memory.cpp  photon_number_new.cpp  plot_fine_scan_evolution.cpp  radiator_npe_comparison.cpp  read_recodata.py  ring_spatial_resolution.cpp  ring_spatial_resolution_with_tracking.cpp  ringtrack_analysis.cpp  ringtrack_draw.cpp  run.sh  test_acceptance.cpp  test_acceptance2.cpp
macros/tracking/: cuts.conf  ringtrack.conf  ringtrack_analysis.cpp  ringtrack_beam.cpp  ringtrack_config.h  ringtrack_draw.cpp  ringtrack_draw_display.cpp  ringtrack_draw_display.cpp.cpp  ringtrack_mult_windows.cpp  ringtrack_noring.cpp  ringtrack_notrack.cpp  ringtrack_ring.cpp  ringtrack_timing.cpp  ringtrack_track_selection.h  run.sh  run_all.sh
macros/utilities/: btana_dump.cpp  lightdata_writer.cpp  qa_tbrowser.cpp  (+7 more)
qa_quicklook/: DISCUSSION.md  README.md  __init__.py  _sheets_adapter.py  _sheets_cli.py  _sheets_format.py  app.py  chain.py  conf_layout.py  cross_run_trends.py  datainspect.py  dbworker.py  download.py  joblock.py  multi_run_scatter.py  overview.py  qa.py  qa_pipeline.py  qa_quicklook.toml  readout_validate.py  remote_watcher.py  requirements.txt  retention.py  rundb.py  runlist.py  runlists.py  runmanager.py  runner.py  sanity.py  scatter_view.py  settings.py  sheets_sync.py  sheets_worker.py  streaming_picker.py  summary.py  theme.py  thumbs.py  toml_form.py  toml_model.py  writers.py
run-lists/: 2023.database.toml  2023.runlists.toml  2024.database.toml  2024.runlists.toml  2025.database.audit.toml  2025.database.toml  2025.runlists.toml  2026.database.audit.toml  2026.database.toml  2026.runlists.toml
scripts/: backfill_audit_legacy.py  check_macros.sh  download_run.sh  enable_branch_protection.sh  import_runbook.py  install.sh  qa_quicklook
server/: drich-analysis.service  index.html  server.py  start.sh
src/: alcor_data.cxx  alcor_data_streamer.cxx  alcor_finedata.cxx  alcor_lightdata.cxx  alcor_recodata.cxx  alcor_recotrackdata.cxx  alcor_spilldata.cxx  analysis_results.cxx  config_reader.cxx  lightdata_writer.cxx  mapping.cxx  parallel_streaming_framer.cxx  radiator_efficiency.cxx  recodata_writer.cxx  recotrackdata_writer.cxx  standard_analysis.cxx  streaming_framer.cxx  tracking_altai.cxx  triggers.cxx
test/: tester_alcor_op_mode.cxx  tester_conf_path.cxx  tester_config_autocouple.cxx  tester_global_index.cxx  tester_ring_arc.cxx
tests/: test_backfill_audit_legacy.py  test_cross_run_trends.py  test_generate_calibration_cache.py  test_multi_run_scatter.py  test_qa_clear_qa.py  test_qa_pipeline.py  test_qa_quicklook_app_config.py  test_qa_quicklook_conf_layout.py  test_qa_quicklook_download.py  test_qa_quicklook_download_extras.py  test_qa_quicklook_joblock.py  test_qa_quicklook_readout_validate.py  test_qa_quicklook_rundb.py  test_qa_quicklook_sheets_sync.py  test_qa_quicklook_streaming_picker.py  test_qa_quicklook_summary.py  test_qa_quicklook_thumbs.py  test_qa_quicklook_toml_model.py  test_remote_watcher.py  test_retention.py
tools/: check_qa.py  lint_codebase.py
(+41 files in other folders)
